--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -2,12 +2,13 @@
   "manifest_version": 2,
   "applications": {
     "gecko": {
-      "id": "{9fba0156-5353-4de0-8d2e-be1b0d9ed590}"
+      "id": "{9fba0156-5353-4de0-8d2e-be1b0d9ed590}",
+      "strict_min_version": "54.0"
     }
   },
   "name": "Mokum share extension",
   "description": "Shares current page to mokum",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "browser_action": {
     "default_icon": "icon-32.png"
   },
